prevent strange color in auto-force dark mode

--- a/metro.css
+++ b/metro.css
@@ -153,6 +153,7 @@ body
 	visibility: hidden;
     -webkit-print-color-adjust: exact;
     color-adjust: exact;
+	color-scheme: only light;
 }
 .edgeV
 {
@@ -169,6 +170,7 @@ body
 	visibility: hidden;
     -webkit-print-color-adjust: exact;
     color-adjust: exact;
+	color-scheme: only light;
 }
 .edgeLT
 {
@@ -185,6 +187,7 @@ body
 	visibility: hidden;
     -webkit-print-color-adjust: exact;
     color-adjust: exact;
+	color-scheme: only light;
 }
 
 .edgeLB
@@ -202,6 +205,7 @@ body
 	visibility: hidden;
     -webkit-print-color-adjust: exact;
     color-adjust: exact;
+	color-scheme: only light;
 }
 .edgeRB
 {
@@ -218,6 +222,7 @@ body
 	visibility: hidden;
     -webkit-print-color-adjust: exact;
     color-adjust: exact;
+	color-scheme: only light;
 }
 .edgeRT
 {
@@ -234,6 +239,7 @@ body
 	visibility: hidden;
     -webkit-print-color-adjust: exact;
     color-adjust: exact;
+	color-scheme: only light;
 }
 
 .group
@@ -274,8 +280,10 @@ body
 	background-size: 102%;
 	background-repeat: no-repeat;
 	box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0);
-	user-select: none;
+	user-select: none;	
+	color-scheme: only light;
 }
+
 
 .routeTextV
 {
@@ -324,6 +332,7 @@ body
 	border-bottom: 3px solid red;
 	transform: translateY(15px) translateX(-12px) rotate(-45deg);
 	visibility: hidden;
+	color-scheme: only light;
 }
 .slash1
 {
@@ -337,6 +346,7 @@ body
 	border-bottom: 3px solid red;
 	transform: translateY(26px) translateX(-4px) rotate(-28deg);
 	visibility: hidden;
+	color-scheme: only light;
 }
 
 .backslash 
@@ -351,6 +361,7 @@ body
 	border-bottom: 3px solid red;
 	transform: translateY(15px) translateX(-10px) rotate(45deg);
 	visibility: hidden;
+	color-scheme: only light;
 }
 .backslash1
 {
@@ -364,6 +375,7 @@ body
 	border-bottom: 3px solid red;
 	transform: translateY(6px) translateX(-3px) rotate(25deg);
 	visibility: hidden;
+	color-scheme: only light;
 }
 
 .hl
@@ -379,6 +391,7 @@ body
 	border-bottom: 3px solid black;	
 	margin-left:0px;
 	visibility: hidden;
+	color-scheme: only light;
 }
 
 .vl
@@ -395,7 +408,7 @@ body
 	margin-left:0px;
 	margin-top:0px;
 	visibility: hidden;
-	
+	color-scheme: only light;	
 	display: flex; align-items: center;
 }
 
